Fix ie11 layout problem

--- a/style/base.scss
+++ b/style/base.scss
@@ -42,6 +42,7 @@
 .react-datagrid__scroller {
   position: relative;
   max-width: 100%;
+  min-width: 100%;
 }
 
 .react-datagrid__scroller__content {
